# tams_ur5_turtlebot_delivery

./: CMakeLists.txt  README.md  modified_unused_ur5.urdf.xacro  package.xml  pythonTest.py
confignotloaded/: joint_limits.yaml  ompl_planning.yaml
launch/: apriltags.launch  object_detector.launch  place_object_server.launch  setup.launch  ur5_bringup.launch  ur5_moveit_planning_execution.launch  ur5_moveit_planning_execution.launch~  ur5corner_upload2.launch
manipulation/: CMakeLists.txt  package.xml
robot/: tams_setup.urdf
scripts/: basisroutine.py  greifeTisch.py  greifeTisch_legeBoden.py  move_group_example.py  move_group_plan2.py  move_group_plan3.py  move_group_python_interface_tutorial.py  move_group_python_interface_tutorialbasic.py  move_group_status.py  pick_place.py  tischsetup.py
src/: PickAndPlaceTest.cpp  PlaceObjectActionServer.cpp  camera_position_node.cpp  camera_position_node.cpp~  cppActionGreifeTisch_legeBoden.cpp  cppActionServerPlaceObject.cpp  cppGreifeTisch_legeBoden.cpp  cppRoutine.cpp  cppRoutineUpdate.cpp  cppRoutineUpdate2.cpp  image_converter.cpp  image_converter_MODE.cpp  movegroup_plan1.cpp  movegroup_plan_pos1_pos2.cpp  object_recognition.cpp  planning_scene_ros_api_tutorial.cpp  planning_scene_setup.cpp  tmp
tams_ur5_turtlebot_delivery/: CMakeLists.txt  package.xml
tams_ur5_turtlebot_delivery/launch/: delivery.launch  ur5_pick_setup.launch
tams_ur5_turtlebot_delivery_coordination/: CMakeLists.txt  package.xml
tams_ur5_turtlebot_delivery_coordination/action/: PlaceObject.action
tams_ur5_turtlebot_delivery_coordination/launch/: coordination.launch  delivery.launch  multimaster.launch
tams_ur5_turtlebot_delivery_coordination/msg/: task.msg  taskStatus.msg
tams_ur5_turtlebot_delivery_coordination/scripts/: coordinator.py  task.py  turtle.py  turtle.py.old
tams_ur5_turtlebot_delivery_coordination/web/: layout.css  map.html  rosLibJsTest.html  rosbridge.js
tams_ur5_turtlebot_delivery_manipulation/: CMakeLists.txt  package.xml
tams_ur5_turtlebot_delivery_manipulation/launch/: place_object_server.launch
tams_ur5_turtlebot_delivery_manipulation/src/: PlaceObjectActionClient.cpp  PlaceObjectActionServer.cpp
tams_ur5_turtlebot_delivery_objectrecognition/: CMakeLists.txt  README.md  package.xml
tams_ur5_turtlebot_delivery_objectrecognition/launch/: object_detector.launch
tams_ur5_turtlebot_delivery_objectrecognition/src/: object_recognition.cpp
tams_ur5_turtlebot_delivery_turtlebot/: CMakeLists.txt  package.xml
tams_ur5_turtlebot_delivery_turtlebot/launch/: multimaster.launch  turtlebot_delivery.launch
tams_ur5_turtlebot_delivery_turtlebot/map/: tams1.pgm  tams1.yaml  tams2.pgm  tams3.pgm
tams_ur5_turtlebot_delivery_turtlebot/msg/: OnlineTurtle.msg  dockingBridge.msg  dockingBridgeReply.msg  itemRequest.msg
tams_ur5_turtlebot_delivery_turtlebot/scripts/: mapPosition.py  turtleAnnounce.py
urdf/: tams_corner.urdf~  tams_setup.urdf.xacro  tams_setup.urdf.xacro~  ur5.urdf.xacro  ur5.urdf_Kopie.xacro
urdf/legacy/: robotiq150robotiq3.urdf.xacro  ur5_joint_limited_robotrobotiq150robotiq3.urdf.xacro  ur5_robotrobotiq150robotiq3.urdf  ur5_robotrobotiq150robotiq3.urdf.xacro
