cmake_minimum_required(VERSION 2.8.3)
project(tams_ur5_turtlebot_delivery)

find_package(catkin REQUIRED)

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES tams_ur5_turtlebot_delivery
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)

include_directories(
# include
# ${catkin_INCLUDE_DIRS}
)
