<?xml version="1.0"?>
<package>
  <name>project15_objectrecognition</name>
  <version>0.0.0</version>
  <description>Object recognition for the tams_ur5_setup demo</description>

  <maintainer email="5jonetzk@informatik.uni-hamburg.de">Yannick Jonetzko</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
