<?xml version="1.0"?>
<package>
  <name>tams_ur5_turtlebot_delivery_turtlebot</name>
  <version>0.0.0</version>
  <description>The tams_ur5_turtlebot_delivery_turtlebot package</description>

  <maintainer email="0rokita@informatik.uni-hamburg.de">0rokita</maintainer>
  <author email="0rokita@informatik.uni-hamburg.de">0rokita</author>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
